--- a/main.html
+++ b/main.html
@@ -8,6 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table width="80%">
+		<tr>
+			<td>left</td>
+			<td class="middle center">middle</td>
+			<td class="right">right</td>
+		</tr>
+		<tr>
+			<td>left</td>
+			<td class="middle center">middle</td>
+			<td class="right center">right</td>
+		</tr>
+		<tr>
+			<td>left</td>
+			<td class="middle center">middle</td>
+			<td class="right center">right</td>
+		</tr>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
