--- a/main.html
+++ b/main.html
@@ -25,6 +25,53 @@
 			<td class="right center">right</td>
 		</tr>
 	</table>
+	<br><br>
+	<table width="80%">
+		<tr style="height: 20px">
+			<td colspan="6"></td>
+		</tr>
+		<tr style="height: 20px">
+			<td rowspan="4"></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr style="height: 20px">
+			<td></td>
+			<td colspan="3" rowspan="2"></td>
+			<td></td>
+		</tr>
+		<tr style="height: 20px">
+			<td></td>
+			<td></td>
+		</tr>
+		<tr style="height: 20px">
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr style="height: 20px">
+			<td colspan="6"></td>
+		</tr>
+	</table>
+
+	<table width="80%">
+		<tr style="height: 20px;background:green">
+			<td colspan="6"></td>
+		</tr>
+		<tr>
+			<td colspan="6" class="middle">
+				<img height="100" src="https://user-images.githubusercontent.com/78348500/217435540-555a8eb0-79a6-4590-90c0-28b620341d42.png" alt="" />
+			</td>
+		</tr>
+		<tr style="height: 20px;background:blue">
+			<td colspan="6"></td>
+		</tr>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
