--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table width="80%">
+	<table width="80%" id="table-1" class="middle">
 		<tr>
 			<td>left</td>
 			<td class="middle center">middle</td>
@@ -26,7 +26,7 @@
 		</tr>
 	</table>
 	<br><br>
-	<table width="80%">
+	<table width="80%" id="table-2"  class="middle">
 		<tr style="height: 20px">
 			<td colspan="6"></td>
 		</tr>
@@ -58,8 +58,8 @@
 			<td colspan="6"></td>
 		</tr>
 	</table>
-
-	<table width="80%">
+<br><br>
+	<table width="80%" id="table-3" class="middle">
 		<tr style="height: 20px;background:green">
 			<td colspan="6"></td>
 		</tr>
