--- a/main.html
+++ b/main.html
@@ -11,8 +11,8 @@
 	<table width="80%" id="table-1" class="middle">
 		<tr>
 			<td>left</td>
-			<td class="middle center">middle</td>
-			<td class="right">right</td>
+			<td class="middle center" id="t12">middle</td>
+			<td class="right"id="t13">right</td>
 		</tr>
 		<tr>
 			<td>left</td>
@@ -65,11 +65,11 @@
 		</tr>
 		<tr>
 			<td colspan="6" class="middle">
-				<img height="100" src="https://user-images.githubusercontent.com/78348500/217435540-555a8eb0-79a6-4590-90c0-28b620341d42.png" alt="" />
+				<img id="t-image img" height="100" src="https://user-images.githubusercontent.com/78348500/217435540-555a8eb0-79a6-4590-90c0-28b620341d42.png" alt="" />
 			</td>
 		</tr>
 		<tr style="height: 20px;background:blue">
-			<td colspan="6"></td>
+			<td colspan="6" id="t21"></td>
 		</tr>
 	</table>
     <script type="text/javascript" src="./script.js">
