--- a/main.html
+++ b/main.html
@@ -60,12 +60,12 @@
 	</table>
 <br><br>
 	<table width="80%" id="table-3" class="middle">
-		<tr style="height: 20px;background:green" id="t-image img">
+		<tr style="height: 20px;background:green">
 			<td colspan="6"></td>
 		</tr>
 		<tr>
-			<td colspan="6" class="middle" id="t-image-img">
-				<img id="t-image" height="100" src="https://user-images.githubusercontent.com/78348500/217435540-555a8eb0-79a6-4590-90c0-28b620341d42.png" alt="" />
+			<td colspan="6" class="middle" id="t-image">
+				<img  height="100" src="https://user-images.githubusercontent.com/78348500/217435540-555a8eb0-79a6-4590-90c0-28b620341d42.png" alt="" />
 			</td>
 		</tr>
 		<tr style="height: 20px;background:blue">
